apps/esphome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
  namespace: homeassistant
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: esphome
  template:
    metadata:
      labels:
        app.kubernetes.io/name: esphome
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: esphome
          image: "esphome/esphome:stable"
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 500m
          ports:
            - name: http
              containerPort: 6052
              protocol: TCP
